# terrain-descriptors

appMetrics/: core.h  heightfield-metrics-hydrology.cpp  heightfield-metrics-local.cpp  heightfield.cpp  heightfield.h  integerfield.cpp  integerfield.h  mainwindow.ui  riversnet.cpp  scalarfield.cpp  scalarfield.h
lib/: CMakeLists.txt
